--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,7 +1,31 @@
 .eventShort {
 	border: solid 1px #ccc;
 	margin: 10px;
-	padding: 10px;
+	overflow: hidden;
+	height: 175px;
+	position: relative;
+}
+
+.eventShort .likes {
+	border: solid 1px #ccc;
+	position: absolute;
+	bottom: 0;
+	left:0;
+	width: 100%;
+	background: #FFF;
+}
+
+.eventShort .likes p {
+	display: inline-block;
+	width: 48%;
+	padding: 0;
+	margin: 0;
+}
+
+
+
+.eventShort img {
+	width: 100%;
 }
 
 body, h1, ul, li {
@@ -22,6 +46,7 @@ header {
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 9999;
 }
 
 .search-block {
@@ -87,13 +112,14 @@ header {
 }
 
 .evs {
-	width:20%;
+	width:25%;
 }
 
 .overlay {
 	position: fixed;
 	top: 0; left: 0; right: 0; bottom: 0;
-	background: rgba(0,0,0,0.7);
+	background: rgba(0,0,0,0.8);
+	z-index: 9998;
 }
 
 .modal1 {
