--- a/server/views/event/index.handlebars
+++ b/server/views/event/index.handlebars
@@ -1,7 +1,7 @@
 <div class="overlay">
 	<div class="modal1">
-		<p>{{ data.title }}</p>
-		<p>{{ data.description }}</p>
+		<p>{{ model.title }}</p>
+		<p>{{ model.description }}</p>
 	</div>
 </div>
 
