--- a/server/views/home/index.handlebars
+++ b/server/views/home/index.handlebars
@@ -10,7 +10,7 @@
 				<button>go</button>
 			</p>
 			<ul class="hts">
-				{{#each tags}}
+				{{#each model.tags}}
 					<li>
 						<a href="" data-value="{{_id}}">#{{_id}}</a>
 					</li>
