addlat lng startdate

--- a/server/views/home/index.handlebars
+++ b/server/views/home/index.handlebars
@@ -64,11 +64,14 @@
 <script id="event_form" type="text/template">
 	<div class="overlay">
 		<div class="modal1">
-			<p><input name="title"></p>
-			<p><input name="descrition"></p>
-			<p><input name="ht"></p>
-			<p><input name="ht"></p>
-			<p><input name="ht"></p>
+			<p><input name="title" placeholder="title"></p>
+			<p><input name="descrition" placeholder="descrition"></p>
+			<p><input name="ht" placeholder="ht"></p>
+			<p><input name="ht" placeholder="ht"></p>
+			<p><input name="ht" placeholder="ht"></p>
+			<p><input name="lat" placeholder="lat" value="1"></p>
+			<p><input name="lng" placeholder="lng" value="2"></p>
+			<p><input name="datetime" placeholder="datetime" value="1425328994065"></p>
 			<p><button name="save">save</button><button name="close">close</button></p>
 		</div>
 	</div>
