--- a/server/views/home/index.handlebars
+++ b/server/views/home/index.handlebars
@@ -72,6 +72,7 @@
 			<p><input name="lat" placeholder="lat" value="1"></p>
 			<p><input name="lng" placeholder="lng" value="2"></p>
 			<p><input name="datetime" placeholder="datetime" value="1425328994065"></p>
+			<p><input name="locationName" placeholder="locationName" value="locationName"></p>
 			<p><button name="save">save</button><button name="close">close</button></p>
 		</div>
 	</div>
